# Tangara

./: .gitignore  Cargo.toml  README.md
src/: context.rs  runtime.rs
tangara/: Cargo.toml
tangara-gen/: Cargo.toml  README.md
tangara-gen-tests/: Cargo.toml  build.rs  mylib.json  refldata.json  refldata.tg  tangara.json
tangara-gen-tests/myhost/: Cargo.toml  build.rs
tangara-gen-tests/myhost/src/: bindings.rs  main.rs
tangara-gen-tests/mylib/: Cargo.toml  build.rs
tangara-gen-tests/mylib/src/: bindings.rs  lib.rs
tangara-gen-tests/src/: bindings.rs  lib.rs
tangara-gen/src/: entrypoint_generator.rs  lib.rs  package_generator.rs  rust_generator.rs  source_generator.rs
tangara-gen/tests/: gentest.rs  mymod.rs
tangara-highlevel/: Cargo.toml
tangara-highlevel/src/: lib.rs  naming.rs
tangara-highlevel/src/builder/: alias_builder.rs  class_builder.rs  constructor_builder.rs  enum_builder.rs  field_builder.rs  interface_builder.rs  method_builder.rs  mod.rs  property_builder.rs  struct_builder.rs
tangara-highlevel/tests/: custom_engine.rs  diligent_engine.rs  naming_tests.rs  tangara.rs
tangara/src/: bindings.rs  context.rs  lib.rs
tangara/tests/: test.rs
tests/: test.rs
