[package]
authors = [
    "Alexander Gunger <alexandergunger666@gmail.com>",
    "Wings Studio"
]
description = "Generate bindings for Tangara"
keywords = ["ffi", "tangara"]
name = "tangara-gen"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/wings-studio/Tangara"

[dependencies]
once_cell = "1.18.0"
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
syn = { version = "2.0", features = ["full", "extra-traits"] }
xxhash-rust = { version = "0.8.7", features = ["xxh3", "const_xxh3"] }
tangara-highlevel = { version = "0.1.0", path = "../tangara-highlevel", features = ["builder"] }

[features]
default = []