[package]
authors = [
    "Alexander Gunger <alexandergunger666@gmail.com>",
    "Wings Studio"
]
description = "Generate & manipulate high-level bindings for Tangara"
keywords = ["ffi", "tangara"]
name = "tangara-highlevel"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/wings-studio/Tangara"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
default = []
serde = ["dep:serde"]