[package]
authors = [
    "Alexander Gunger <alexandergunger666@gmail.com>"
]
description = "Generate & manipulate high-level bindings for Tangara"
keywords = ["ffi", "tangara"]
name = "tangara-highlevel"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/wings-studio/Tangara"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
xxhash-rust = { version = "0.8.8", optional = true, features = ["xxh3", "const_xxh3"] }

[features]
default = []
builder = ["dep:xxhash-rust"]