[package]
authors = [
    "Alexander Gunger <alexandergunger666@gmail.com>",
    "Wings Studio"
]
description = "Library for helping with interop between languages"
keywords = ["ffi", "tangara"]
name = "tangara"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/wings-studio/Tangara"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quote = { version = "1.0", optional = true }
proc-macro2 = { version = "1.0", optional = true }
syn = { version = "2.0", optional = true, features = ["full", "extra-traits"] }
xxhash-rust = { version = "0.8.7", optional = true, features = ["xxh3", "const_xxh3"] }

[features]
default = []
gen = ["dep:quote", "dep:proc-macro2", "dep:syn", "dep:xxhash-rust"]