[package]
authors = [
    "Alexander Gunger <alexandergunger666@gmail.com>"
]
description = "Library for helping with interop between languages"
keywords = ["ffi", "tangara"]
name = "tangara"
version = "0.1.0"
edition = "2021"
readme = "../README.md"
repository = "https://github.com/wings-studio/Tangara"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []