[package]
name = "myhost"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tangara = { version = "0.1.0", path = "../../tangara" }
libloading = "0.8.1"

[build-dependencies]
tangara-gen = { version = "0.1.0", path = "../../tangara-gen" }
tangara-highlevel = { version = "0.1.0", path = "../../tangara-highlevel", features = ["serde"] }
serde_json = "1.0"