[package]
name = "mylib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
tangara = { version = "0.1.0", path = "../../tangara" }

[build-dependencies]
tangara-gen = { version = "0.1.0", path = "../../tangara-gen" }
tangara-highlevel = { version = "0.1.0", path = "../../tangara-highlevel", features = ["serde"] }
serde_json = "1.0"
